Fixing deniscono->definiscono

--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -197,7 +197,7 @@ fornendo il riferimento sempre alla sola copia attiva), ma i diversi meccanismi
 devono restare nascosti.
 Un server quindi implementa o l'interfaccia IClassFactory (oppure la sua
 seconda versione, che permette di lavorare anche sfruttando un'apposita licenza dell'oggetto stesso). Queste interfacce
-infatti deniscono un metodo per
+infatti definiscono un metodo per
 creare un'istanza dell'oggetto, oppure di ottenere un riferimento all'oggetto già
 a
 esistente (CreateInstance). Questo metodo (e le sue varianti) devono quindi
