--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -399,7 +399,7 @@ richiamare l'operazione e fornire il risultato. Si potrebbero realizzare tutte l
 operazioni dinamiche, ma hanno un costo molto elevato! Tuttavia, vi sono
 diversi modi per ottenere il risultato, non solo in maniera sincrona bloccante
 (utilizzando la GetAnswer), realizzando quindi delle operazioni maggiormente
-disaccoppiate. Si deniscono quindi la:
+disaccoppiate. Si definiscono quindi la:
 $\bullet$ Send-deferred per realizzare un sistema sincrono non bloccante. Si utilizza
 un sistema basato su un oggetto poll-response.
 $\bullet$ Send-one-way invece per avere una comunicazione asincrona.32
