--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -198,7 +198,7 @@ fare non sono più valide in maniera gratuita! Come devono lavorare le copie?
 u
 Se potessero lavorare in maniera indipendente, per cui ogni copia può proo
 cessare i messaggi nell'ordine in cui le arrivano, senza preoccuparsi dell'ordine
-delle altre, si avrebbe un'infrastruttura a costo minimo. . . tuttavia ciò non `
+delle altre, si avrebbe un'infrastruttura a costo minimo. . . tuttavia ciò non è
 o
 e
 sempre possibile.
