--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -152,7 +152,7 @@ essere presente su tutti i nodi, per mascherare l'hw per il mw.
 Le applicazioni si possono quindi costruire sopra DPE, sfruttando delle applicazioni TINA-C già presenti ! Si hanno
 quindi una serie di oggetti presenti su
 ogni nodo. Queste applicazioni non sono localizzati, e si può trattare di servizi
-da orire, risorse ed elementi della rete. Il sistema è quindi trasparente, perché
+da offrire, risorse ed elementi della rete. Il sistema è quindi trasparente, perché
 non si vede mai dove le risorse sono realmente allocate.
 In realtà, TINA-C prevede anche una visione non trasparente! Lo standard
 del 2000 infatti denisce che l'utente deve esprimere le proprie preferenze, e
