--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -1,6 +1,6 @@
 \section{Gestione delle risorse e sistemi mobili}
 Le risorse in un sistema distribuito possono essere o concentrate o distribuite.
-L'idea è comunque quella di cercare di orire un servizio d trasparenza accedene
+L'idea è comunque quella di cercare di offrire un servizio d trasparenza accedene
 do alla risorsa.
 Si deve quindi avere un sistema per descrivere le risorse, magari sfruttando
 l'XML se si sta lavorando ad alto livello. Se inoltre si potesse definire la qualità
