--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -371,7 +371,7 @@ una determinata SLA, senza considerare il traco corrente, ovvero permette di
 riservare delle risorse in maniera attiva per il servizio. L'idea è che si inviino
 delle informazione dal ricevente al mittente (e viceversa) per poter valutare le
 risorse (ovvero ogni risorsa dovrà provvedere con un opportuno messaggio da
-inoltrare, per indicare la qualità di servizio che può orire). Si ha quindi una
+inoltrare, per indicare la qualità di servizio che può offrire). Si ha quindi una
 propagazione della gestione, per indicare la disponibilità!
 Si tratta di un protocollo con soft state, ovvero il ricevente, una volta accordato il servizio e le modalità, dovrà
 preoccuparsi di rinnovare periodicamente
