--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -73,7 +73,7 @@ cosa serve! Fornisce quindi un supporto continuo, e sfrutta tutti i sistemi che
 verranno descritti in seguito (POA, interface repository, . . . ).
 \subsection{L'IDL}
 Il linguaggio per le interfacce è fondamentale per poter definire il contratto che
-si vuole realizzare (quindi la descrizione di tutti i servizi da orire). Questo
+si vuole realizzare (quindi la descrizione di tutti i servizi da offrire). Questo
 contratto sarà quindi incorporato nei vari proxy, ovvero sarà poi compilato nei
 linguaggi specici di implementazione!
 
