--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -155,7 +155,7 @@ ogni nodo. Queste applicazioni non sono localizzati, e si può trattare di servi
 da offrire, risorse ed elementi della rete. Il sistema è quindi trasparente, perché
 non si vede mai dove le risorse sono realmente allocate.
 In realtà, TINA-C prevede anche una visione non trasparente! Lo standard
-del 2000 infatti denisce che l'utente deve esprimere le proprie preferenze, e
+del 2000 infatti definisce che l'utente deve esprimere le proprie preferenze, e
 quindi per poter sviluppare un modello complesso, si deve tener conto della
 locazione: si può progettare il sistema inizialmente come non trasparente, e
 quindi aggiungere la trasparenza!
