--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -55,7 +55,7 @@ in grado di fornire dei meccanismi con cui i processi possano comunicare in
 remoto e quindi la possibilità di realizzare delle politiche per la gestione delle
 risorse.
 In particolare, si possono avere due diversi approcci:
-$\bullet$ Load Sharing: si denisce la condivisione del carico come carico globale
+$\bullet$ Load Sharing: si definisce la condivisione del carico come carico globale
 del sistema, ovvero è uno scheduling totale del sistema. L'idea è quella di
 evitare processi idle, mantenendoli sempre al massimo del lavoro possibile.
 Si tratta di una valutazione statica, i processi non si possono muovere su
@@ -75,7 +75,7 @@ e o
 divenire molto intrusivo. Le valutazioni dinamiche, che realizzano politiche di
 minima intrusione locali e semplici son sempre da preferire.
 Si sono visti diversi modelli per l'esecuzione di processi per ilload sharing:
-$\bullet$ Modello a ring logico: un esempio è V-kernel. Si denisce quindi una
+$\bullet$ Modello a ring logico: un esempio è V-kernel. Si definisce quindi una
 struttura ssa, statica, che spiega come i processi possano muoversi. Vi
 85
 ` un token che stabilisce quale processore è il gestore in quel momento, il
